--- a/ELEMENTS/index.html
+++ b/ELEMENTS/index.html
@@ -11,49 +11,18 @@
   <body>
     <header>
       <div class="headerChild1">
-        <div class="headerChild1Child1"><a href="#"><img src="src/img/icons/nav/navIcon1.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/navIcon2.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/navIcon3.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/navIcon4.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/navIcon5.png" width="30px"></a></div>
+        <div class="headerChild1Child1"><a href="#"><img src="src/img/icons/nav/white/navIcon1.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon2.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon3.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon4.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon5.png" width="30px"></a></div>
       </div>
       <div class="headerChild2">elements</div>
       <div id="headerChild3">8:05am</div>
     </header>
     <content>
       <div class="mainContentBox">
-        <div class="contBoxChild1">
-          <div class="pageMessage" id="timeOfDayWelcomeMessage">Good morning, *yourname*</div>
-        </div>
-        <div class="contBoxChild2">
-           <div class="outfitWeatherContainer">
-              <div class="weatherDisplayTable">
-                <img src="src/img/icons/weather/placementicon.png" id="weatherIcon">
-                <div class="weatherText">
-                  <h1 id="weatherTemp">18&#176;</h1>
-                  <p id="weatherDesc">light rain</p>
-                </div>
-              </div>
-              <div class="outfitDisplayTable">
-                <h1 class="outfitDisplayTitle">Today's Outfit Breakdown:</h1>
-                <p class="topsSectionTitle">TOPS:</p>
-                <div class="displayBox" id="tShirtDisplayBox">Green T-Shirt</div>
-                <div class="displayBox" id="jumperDisplayBox">Black Jumper</div>
-                <p class="topsSectionTitle">TOPS:</p>
-                <div class="displayBox" id="bottomsDisplayBox">Black Trousers</div>
-                <p class="topsSectionTitle">TOPS:</p>
-                <div class="displayBox" id="outerwearDisplayBox">Black Waterproof Coat</div>
-              </div>
-          </div>
-          <div class="outfitGraphicContainer">
-              <div class="outfitGraphic1">
-                <img id="topsDisplayIcon" src="src/img/icons/clothes/topsIcon.png" width="200px">
-              </div>
-              <div class="outfitGraphic2">
-                <img id="bottomsDisplayIcon" src="src/img/icons/clothes/bottomsIcon.png" width="200px">
-              </div>
-          </div>
-        </div>
+        sign up sheet boi
       </div>
     </content>
     <footer>
