--- a/ELEMENTS/index.html
+++ b/ELEMENTS/index.html
@@ -11,11 +11,11 @@
   <body>
     <header>
       <div class="headerChild1">
-        <div class="headerChild1Child1"><a href="#"><img src="src/img/icons/nav/white/navIcon1.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon2.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon3.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon4.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="#"><img src="src/img/icons/nav/white/navIcon5.png" width="30px"></a></div>
+        <div class="headerChild1Child1"><a href="html/home.html"><img src="src/img/icons/nav/white/navIcon1.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/addclothes.html"><img src="src/img/icons/nav/white/navIcon2.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/laundry.html"><img src="src/img/icons/nav/white/navIcon3.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/yourclothes.html"><img src="src/img/icons/nav/white/navIcon4.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/settings.html"><img src="src/img/icons/nav/white/navIcon5.png" width="30px"></a></div>
       </div>
       <div class="headerChild2">elements</div>
       <div id="headerChild3">8:05am</div>
