--- a/ELEMENTS/html/home.html
+++ b/ELEMENTS/html/home.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="x-icon" href="../src/img/icons/tab/tabicon.png"/>
+    <link rel="shortcut icon" type="x-icon" href="../img/icons/tab/tabicon.png"/>
     <link rel="stylesheet" type="text/css" href="../css/mainstyle.css"/>
     <link rel="stylesheet" type="text/css" href="../css/home.css"/>
     <script src="../js/script.js"></script>
@@ -11,11 +11,11 @@
   <body>
     <header>
       <div class="headerChild1">
-        <div class="headerChild1Child1"><a href="home.html"><img src="../src/img/icons/nav/white/navIcon1.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="addclothes.html"><img src="../src/img/icons/nav/white/navIcon2.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="laundry.html"><img src="../src/img/icons/nav/white/navIcon3.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="yourclothes.html"><img src="../src/img/icons/nav/white/navIcon4.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="settings.html"><img src="../src/img/icons/nav/white/navIcon5.png" width="30px"></a></div>
+        <div class="headerChild1Child1"><a href="home.html"><img src="../img/icons/nav/white/navIcon1.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="addclothes.html"><img src="../img/icons/nav/white/navIcon2.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="laundry.html"><img src="../img/icons/nav/white/navIcon3.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="yourclothes.html"><img src="../img/icons/nav/white/navIcon4.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="settings.html"><img src="../img/icons/nav/white/navIcon5.png" width="30px"></a></div>
       </div>
       <div class="headerChild2">elements</div>
       <div id="headerChild3">time</div>
@@ -28,7 +28,7 @@
         <div class="contBoxChild2">
            <div class="outfitWeatherContainer">
               <div class="weatherDisplayTable">
-                <img src="../src/img/icons/weather/placementicon.png" id="weatherIcon">
+                <img src="../img/icons/weather/placementicon.png" id="weatherIcon">
                 <div class="weatherText">
                   <h1 id="weatherTemp">18&#176;</h1>
                   <p id="weatherDesc">light rain</p>
@@ -47,10 +47,10 @@
           </div>
           <div class="outfitGraphicContainer">
               <div class="outfitGraphic1">
-                <img id="topsDisplayIcon" src="../src/img/icons/clothes/topsIcon.png" width="200px">
+                <img id="topsDisplayIcon" src="../img/icons/clothes/topsIcon.png" width="200px">
               </div>
               <div class="outfitGraphic2">
-                <img id="bottomsDisplayIcon" src="../src/img/icons/clothes/bottomsIcon.png" width="200px">
+                <img id="bottomsDisplayIcon" src="../img/icons/clothes/bottomsIcon.png" width="200px">
               </div>
           </div>
         </div>
