--- a/ELEMENTS/html/laundry.html
+++ b/ELEMENTS/html/laundry.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="x-icon" href="../src/img/icons/tab/tabicon.png"/>
+    <link rel="shortcut icon" type="x-icon" href="../img/icons/tab/tabicon.png"/>
     <link rel="stylesheet" type="text/css" href="../css/mainstyle.css"/>
     <link rel="stylesheet" type="text/css" href="../css/laundry.css"/>
     <script src="../js/script.js"></script>
@@ -11,11 +11,11 @@
   <body>
     <header>
       <div class="headerChild1">
-        <div class="headerChild1Child1"><a href="home.html"><img src="../src/img/icons/nav/white/navIcon1.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="addclothes.html"><img src="../src/img/icons/nav/white/navIcon2.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="laundry.html"><img src="../src/img/icons/nav/white/navIcon3.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="yourclothes.html"><img src="../src/img/icons/nav/white/navIcon4.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="settings.html"><img src="../src/img/icons/nav/white/navIcon5.png" width="30px"></a></div>
+        <div class="headerChild1Child1"><a href="home.html"><img src="../img/icons/nav/white/navIcon1.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="addclothes.html"><img src="../img/icons/nav/white/navIcon2.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="laundry.html"><img src="../img/icons/nav/white/navIcon3.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="yourclothes.html"><img src="../img/icons/nav/white/navIcon4.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="settings.html"><img src="../img/icons/nav/white/navIcon5.png" width="30px"></a></div>
       </div>
       <div class="headerChild2">elements</div>
       <div id="headerChild3">time</div>
