--- a/ELEMENTS/index.html
+++ b/ELEMENTS/index.html
@@ -2,20 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="x-icon" href="src/img/icons/tab/tabicon.png"/>
+    <link rel="shortcut icon" type="x-icon" href="img/icons/tab/tabicon.png"/>
     <link rel="stylesheet" type="text/css" href="css/mainstyle.css"/>
     <link rel="stylesheet" type="text/css" href="css/indexstyle.css"/>
     <script src="js/script.js"></script>
+    <style>body{background-color: white; color: black;}</style>
     <title>ELEMENTS</title>
   </head>
   <body>
     <header>
       <div class="headerChild1">
-        <div class="headerChild1Child1"><a href="html/home.html"><img src="src/img/icons/nav/white/navIcon1.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="html/addclothes.html"><img src="src/img/icons/nav/white/navIcon2.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="html/laundry.html"><img src="src/img/icons/nav/white/navIcon3.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="html/yourclothes.html"><img src="src/img/icons/nav/white/navIcon4.png" width="30px"></a></div>
-        <div class="headerChild1Child2"><a href="html/settings.html"><img src="src/img/icons/nav/white/navIcon5.png" width="30px"></a></div>
+        <div class="headerChild1Child1"><a href="html/home.html"><img src="img/icons/nav/black/navIcon1.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/addclothes.html"><img src="img/icons/nav/black/navIcon2.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/laundry.html"><img src="img/icons/nav/black/navIcon3.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/yourclothes.html"><img src="img/icons/nav/black/navIcon4.png" width="30px"></a></div>
+        <div class="headerChild1Child2"><a href="html/settings.html"><img src="img/icons/nav/black/navIcon5.png" width="30px"></a></div>
       </div>
       <div class="headerChild2">elements</div>
       <div id="headerChild3">8:05am</div>
