--- a/ELEMENTS/index.html
+++ b/ELEMENTS/index.html
@@ -13,11 +13,11 @@
   <body>
     <header>
       <div class="headerChild1">
-        <div class="headerChild1Child1"><a href="home.html"><img src="../img/icons/nav/white/navIcon1.png" width="22px"></a></div>
-        <div class="headerChild1Child1"><a href="addclothes.html"><img src="../img/icons/nav/white/navIcon2.png" width="22px"></a></div>
-        <div class="headerChild1Child1"><a href="laundry.html"><img src="../img/icons/nav/white/navIcon3.png" width="22px"></a></div>
-        <div class="headerChild1Child1"><a href="yourclothes.html"><img src="../img/icons/nav/white/navIcon4.png" width="22px"></a></div>
-        <div class="headerChild1Child1"><a href="settings.html"><img src="../img/icons/nav/white/navIcon5.png" width="22px"></a></div>
+        <div class="headerChild1Child1"><a href="home.html"><img src="img/icons/nav/black/navIcon1.png" width="22px"></a></div>
+        <div class="headerChild1Child1"><a href="addclothes.html"><img src="img/icons/nav/black/navIcon2.png" width="22px"></a></div>
+        <div class="headerChild1Child1"><a href="laundry.html"><img src="img/icons/nav/black/navIcon3.png" width="22px"></a></div>
+        <div class="headerChild1Child1"><a href="yourclothes.html"><img src="img/icons/nav/black/navIcon4.png" width="22px"></a></div>
+        <div class="headerChild1Child1"><a href="settings.html"><img src="img/icons/nav/black/navIcon5.png" width="22px"></a></div>
       </div>
       <div class="headerChild2">elements</div>
       <div id="headerChild3">8:05am</div>
